package local.sop.sopinfo.organisation.application.api.dto;

import java.util.UUID;

public record OrganisationQuery (UUID id) { }

