package local.sop.datawarehouse.gateway.common.handlers.organisation.api.dto.response;

import java.util.UUID;

public record OrganisationResponse(UUID id, String name, String cvr) {

}
